--- a/frontend/src/styles/loadingSpinner.css
+++ b/frontend/src/styles/loadingSpinner.css
@@ -1,33 +1,61 @@
 .loader {
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  position: relative;
-}
-.loader::after,
-.loader::before {
-  content: '';  
-  box-sizing: border-box;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: 2px solid #FFF;
-  position: absolute;
-  left: 0;
-  top: 0;
-  animation: animloader 2s linear infinite;
-}
-.loader::after {
-  animation-delay: 1s;
+  animation: rotate 1s infinite;
+  height: 50px;
+  width: 50px;
 }
 
-@keyframes animloader {
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 15px;
+  width: 15px;
+}
+.loader:before {
+  animation: ball1 1s infinite;
+  background-color: #fff;
+  box-shadow: 30px 0 0 #58a6ff;
+  margin-bottom: 10px;
+}
+.loader:after {
+  animation: ball2 1s infinite;
+  background-color: #58a6ff;
+  box-shadow: 30px 0 0 #fff;
+}
+
+@keyframes rotate {
+  0% { transform: rotate(0deg) scale(0.8) }
+  50% { transform: rotate(360deg) scale(1.2) }
+  100% { transform: rotate(720deg) scale(0.8) }
+}
+
+@keyframes ball1 {
   0% {
-    transform: scale(0);
-    opacity: 1;
+    box-shadow: 30px 0 0 #58a6ff;
+  }
+  50% {
+    box-shadow: 0 0 0 #58a6ff;
+    margin-bottom: 0;
+    transform: translate(15px, 15px);
   }
   100% {
-    transform: scale(1);
-    opacity: 0;
+    box-shadow: 30px 0 0 #58a6ff;
+    margin-bottom: 10px;
+  }
+}
+
+@keyframes ball2 {
+  0% {
+    box-shadow: 30px 0 0 #fff;
+  }
+  50% {
+    box-shadow: 0 0 0 #fff;
+    margin-top: -20px;
+    transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 #fff;
+    margin-top: 0;
   }
 }
